--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 !**/src/main/resources/application.properties
+carefree-ui/node_modules
 
 ### STS ###
 .apt_generated
